added chat, calender and task page